Added media queries to all css files

--- a/components/accordian.css
+++ b/components/accordian.css
@@ -24,3 +24,20 @@
     border-style:solid;
     width:100%;
 }
+
+
+@media screen and (min-width: 600px) {
+   
+}
+
+@media screen and (min-width: 900px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+ 
+}
+
+@media screen and (min-width: 1800px) {
+ 
+}
