--- a/components/carousel.css
+++ b/components/carousel.css
@@ -25,3 +25,19 @@
 .imageWrapper{
     align-self:center;
 }
+
+@media screen and (min-width: 600px) {
+   
+}
+
+@media screen and (min-width: 900px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+ 
+}
+
+@media screen and (min-width: 1800px) {
+ 
+}
