--- a/components/banner.css
+++ b/components/banner.css
@@ -15,3 +15,19 @@
     width:100%;
     height:400px;
 }
+
+@media screen and (min-width: 600px) {
+   
+}
+
+@media screen and (min-width: 900px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+ 
+}
+
+@media screen and (min-width: 1800px) {
+ 
+}
