--- a/components/contactFormMap.css
+++ b/components/contactFormMap.css
@@ -26,3 +26,19 @@
     width:25%;
     align-self:center;
 }
+
+@media screen and (min-width: 600px) {
+   
+}
+
+@media screen and (min-width: 900px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+ 
+}
+
+@media screen and (min-width: 1800px) {
+ 
+}
