--- a/components/footer.css
+++ b/components/footer.css
@@ -5,3 +5,19 @@
     background-color:black;
     margin-top:20px;
 }
+
+@media screen and (min-width: 600px) {
+   
+}
+
+@media screen and (min-width: 900px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+ 
+}
+
+@media screen and (min-width: 1800px) {
+ 
+}
