--- a/components/horizontalTab.css
+++ b/components/horizontalTab.css
@@ -18,3 +18,19 @@
     padding: 0 5px;
     border-top: none;
 }
+
+@media screen and (min-width: 600px) {
+   
+}
+
+@media screen and (min-width: 900px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+ 
+}
+
+@media screen and (min-width: 1800px) {
+ 
+}
