--- a/components/menu.css
+++ b/components/menu.css
@@ -14,3 +14,19 @@
     color: white;
     padding: 5px;
 }
+
+@media screen and (min-width: 600px) {
+   
+}
+
+@media screen and (min-width: 900px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+ 
+}
+
+@media screen and (min-width: 1800px) {
+ 
+}
