--- a/components/paragraphimageright.css
+++ b/components/paragraphimageright.css
@@ -29,4 +29,21 @@ p {
     background-color: lightgray;
 }
 
+
+@media screen and (min-width: 600px) {
+   
+}
+
+@media screen and (min-width: 900px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+ 
+}
+
+@media screen and (min-width: 1800px) {
+ 
+}
+
 /* On bigger screens make sure to change the image display */
