--- a/components/slick.css
+++ b/components/slick.css
@@ -6,4 +6,20 @@
   .slick-slide img {
     margin: auto;
   }
+
   
+  @media screen and (min-width: 600px) {
+   
+}
+
+@media screen and (min-width: 900px) {
+ 
+}
+
+@media screen and (min-width: 1200px) {
+ 
+}
+
+@media screen and (min-width: 1800px) {
+ 
+}
