--- a/components/menu.css
+++ b/components/menu.css
@@ -16,7 +16,9 @@
 }
 
 @media screen and (min-width: 600px) {
-   
+   .menuList{
+       top:85px;
+   }
 }
 
 @media screen and (min-width: 900px) {
