--- a/components/contactFormMap.css
+++ b/components/contactFormMap.css
@@ -49,9 +49,13 @@
     text-decoration: none;
     display: inline-block;
     font-size: 15px;
-    margin: 4px 45px;
     cursor: pointer;
     border-radius: 2px;
+    width: 100px;
+    max-width: 300px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-top: 5px;
 }
 
 .message {
@@ -68,7 +72,7 @@
     margin-bottom: 10px;
 }
 @media screen and (min-width: 600px) {
-   
+    
 }
 
 @media screen and (min-width: 900px) {
