--- a/components/accordian.css
+++ b/components/accordian.css
@@ -35,7 +35,9 @@
 }
 
 @media screen and (min-width: 900px) {
- 
+    .wrapper {
+        width: 600px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
