--- a/components/horizontalTab.css
+++ b/components/horizontalTab.css
@@ -36,7 +36,8 @@
     }
 
     .tab {
-        width: 75%;
+        width: 75%; 
+        /* 75% because there are 4 tabs and containter is 300px 300/4 = 75 */
         text-align: center;
     }
 
