--- a/components/horizontalTab.css
+++ b/components/horizontalTab.css
@@ -9,6 +9,10 @@
     align-self:center;    
 }
 
+.tabWrapper h3 {
+    display: none;
+}
+
 .tabContent{
     align-self:center;
 }
@@ -21,6 +25,7 @@
 }
 
 @media screen and (min-width: 600px) {
+
     
     .tabContent img {
         height: 300px;
@@ -61,6 +66,10 @@
         text-align: center;
         flex-grow: 1;
         margin: 0 0 50px 0;
+    }
+
+    .tabWrapper h3 {
+        display: inline;
     }
 
     .tabContent {
