--- a/components/paragraphimageright.css
+++ b/components/paragraphimageright.css
@@ -54,7 +54,8 @@ p {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 75px;
+    margin-top: 50px;
+    margin-bottom: 75px;
 }
 
 p {
