--- a/components/paragraphimageright.css
+++ b/components/paragraphimageright.css
@@ -8,6 +8,11 @@
     display:none;
 }
 
+.wrapper {
+    box-shadow:10px 10px 8px #888888;
+    padding-bottom:3px;
+}
+
 
 p {
     margin: 10 auto;
